# FourTops

./: .gitignore  CMakeLists.txt  CompileCran  CompileCran2  CompileMacro  CompileSingleMacro  CompileSingleMacroEl  CraneenProcesser.cc  CraneenProcessor.cc  CraneenProcessor2.cc  CraneenStacker.cc  Craneens.xml  FourTop_EventSelection_Dilepton_Run2.cc  FourTop_EventSelection_Run2.cc  FourTop_EventSelection_SingleLepton_Run2.cc  FourTop_EventSelection_SingleLepton_Run2_Local.cc  FourTop_EventSelection_SingleLepton_Run2_New.cc  GridLaunch.py  GridLaunchSingleLep.py  HistosPtEta.root  HistosPtEta_Dilep.root  HistosPtEta_TTJets_4J.root  LaunchParallelMacro.py  LaunchParallelSingleMacro.py  LaunchParallelSingleMacro74.py  LaunchParallelSingleMacro74El.py  LaunchParallelSingleMacro74mu.py  LocalCompile  LocalCompileEl  MACRO  MVADeveloper.cc  Makefile  README.md  SimpleTest.cc  datacard_tttt_13TeV.txt  eventcount.py  foutMVA.root  plotSys.C  shapefileMuEl.root  shapefileMuEl_20_HT2M_Split.root  (+6 more)
MVA/: MVADeveloper.cc  MasterMVA.root  MasterMVA_Mu_3rdJul.root  MasterMVA_SingleMuon_23rdMarch.root
SingleLepAnalysis/src/: CMakeLists.txt  HadronicTopReco.cc  Trigger.cc  Zpeak.cc
Submit_Scripts/: LanaSubmitDYJets.sh  LanaSubmitData_Run2015C_Silver.sh  LanaSubmitData_Run2015D_v3_Silver.sh  LanaSubmitData_Run2015D_v4_Silver.sh  LanaSubmitData_Run2015D_v4_Silver_1000plus.sh  LanaSubmitTTJets_MLM.sh  LanaSubmitTTJets_aMCatNLO.sh  LanaSubmitT_tW.sh  LanaSubmitTbar_tW.sh  LanaSubmitWJets.sh  LanaSubmitttttNLO.sh  MuSubmitData_Run2015C_Silver.sh  MuSubmitData_Run2015D_v3_Silver.sh  (+5 more)
(+31 files in other folders)
